--- a/index.html
+++ b/index.html
@@ -2,43 +2,112 @@
 <html lang="en-US">
 <head>
   <meta charset="UTF-8">
-  <title>Phantom Diaries | True Horror Stories from the USA</title>
 
-  <meta name="description" content="True horror stories, paranormal encounters and haunted places from the USA. Welcome to Phantom Diaries.">
+  <title>Phantom Diaries – Real Horror & Paranormal Stories from the USA</title>
+
+  <meta name="description" content="Phantom Diaries brings real horror stories, paranormal encounters, and haunted places from the United States. Read true fear from America.">
+  <meta name="keywords" content="true horror stories USA, paranormal stories America, haunted places USA, real ghost stories">
   <meta name="language" content="en-US">
   <meta name="geo.region" content="US">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
     body {
-      background: black;
-      color: #eee;
+      background: #000;
+      color: #e0e0e0;
       font-family: Arial, sans-serif;
       margin: 0;
+      line-height: 1.6;
     }
+
     header {
-      background: #0b0b0b;
-      padding: 30px;
+      background: radial-gradient(circle, #1a0000, #000);
+      padding: 50px 20px;
       text-align: center;
+      border-bottom: 2px solid darkred;
     }
-    h1 { color: red; }
+
+    header h1 {
+      color: darkred;
+      font-size: 42px;
+      margin: 0;
+      letter-spacing: 2px;
+    }
+
+    header p {
+      color: #ccc;
+      font-size: 18px;
+      margin-top: 10px;
+    }
+
     .content {
-      padding: 20px;
-      max-width: 800px;
+      max-width: 900px;
       margin: auto;
+      padding: 30px 20px;
+    }
+
+    h2 {
+      color: #ff4444;
+      border-bottom: 1px solid #330000;
+      padding-bottom: 5px;
+      margin-top: 40px;
+    }
+
+    footer {
+      background: #050505;
+      color: #777;
+      text-align: center;
+      padding: 20px;
+      margin-top: 60px;
+      font-size: 14px;
+      border-top: 1px solid #220000;
     }
   </style>
 </head>
+
 <body>
 
 <header>
   <h1>Phantom Diaries</h1>
-  <p>True Horror Stories from the USA</p>
+  <p>Real Horror, Paranormal Encounters & Haunted Stories from the USA</p>
 </header>
 
 <div class="content">
-  <h2>Latest Horror Story</h2>
-  <p>A terrifying presence was reported in an abandoned house in Texas...</p>
+
+  <h2>True Horror Story from Texas</h2>
+  <p>
+    In a remote town in Texas, an abandoned farmhouse became the center of unexplainable fear.
+    Neighbors reported hearing footsteps echoing through empty halls, whispers in the dead of night,
+    and doors opening on their own. A family who dared to stay overnight fled before sunrise,
+    claiming something was watching them from the shadows.
+  </p>
+
+  <h2>Haunted House in New Orleans</h2>
+  <p>
+    New Orleans is known for its dark history, but one house on the outskirts of the city is feared even today.
+    Visitors describe sudden drops in temperature, voices calling their names, and the feeling of unseen hands
+    brushing against them. Paranormal investigators believe the spirits there are restless and aware.
+  </p>
+
+  <h2>Paranormal Encounter in California</h2>
+  <p>
+    Late one night, a truck driver traveling through rural California reported seeing a pale human-like figure
+    standing motionless in the middle of the road. When he stopped his vehicle, the figure vanished instantly,
+    leaving behind an unnatural silence and an overwhelming sense of dread.
+  </p>
+
+  <h2>Urban Legend from Appalachia</h2>
+  <p>
+    Deep within the Appalachian mountains, locals whisper about a presence that mimics human voices.
+    Campers have gone missing after following cries for help that lead deep into the forest.
+    Those who return speak of glowing eyes watching from between the trees.
+  </p>
+
 </div>
+
+<footer>
+  © 2026 Phantom Diaries · All stories inspired by real American folklore & eyewitness accounts
+</footer>
 
 </body>
 </html>
