--- a/index.html
+++ b/index.html
@@ -2,63 +2,78 @@
 <html lang="en-US">
 <head>
   <meta charset="UTF-8">
+  <title>Phantom Diaries – Real Horror Stories from the USA</title>
 
-  <title>Phantom Diaries – Real Horror & Paranormal Stories from the USA</title>
-
-  <meta name="description" content="Phantom Diaries brings real horror stories, paranormal encounters, and haunted places from the United States. Read true fear from America.">
-  <meta name="keywords" content="true horror stories USA, paranormal stories America, haunted places USA, real ghost stories">
-  <meta name="language" content="en-US">
-  <meta name="geo.region" content="US">
+  <meta name="description" content="True horror stories, paranormal encounters and haunted places from the USA. Phantom Diaries delivers real fear.">
+  <meta name="keywords" content="true horror stories USA, paranormal America, haunted places USA">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Creepster&family=Montserrat&display=swap" rel="stylesheet">
 
   <style>
     body {
-      background: #000;
-      color: #e0e0e0;
-      font-family: Arial, sans-serif;
       margin: 0;
-      line-height: 1.6;
+      font-family: 'Montserrat', sans-serif;
+      background: radial-gradient(circle at top, #1a0000, #000);
+      color: #e6e6e6;
+      line-height: 1.7;
     }
 
     header {
-      background: radial-gradient(circle, #1a0000, #000);
-      padding: 50px 20px;
       text-align: center;
+      padding: 80px 20px;
+      background: linear-gradient(to bottom, #000, #120000);
       border-bottom: 2px solid darkred;
     }
 
     header h1 {
+      font-family: 'Creepster', cursive;
+      font-size: 64px;
       color: darkred;
-      font-size: 42px;
+      letter-spacing: 4px;
+      text-shadow: 0 0 15px red;
       margin: 0;
-      letter-spacing: 2px;
     }
 
     header p {
-      color: #ccc;
       font-size: 18px;
-      margin-top: 10px;
+      color: #ccc;
+      margin-top: 15px;
     }
 
     .content {
       max-width: 900px;
       margin: auto;
-      padding: 30px 20px;
+      padding: 40px 20px;
     }
 
-    h2 {
+    .story {
+      background: #050505;
+      padding: 25px;
+      margin-bottom: 40px;
+      border-left: 4px solid darkred;
+      box-shadow: 0 0 20px rgba(255,0,0,0.1);
+      transition: transform 0.3s, box-shadow 0.3s;
+    }
+
+    .story:hover {
+      transform: scale(1.02);
+      box-shadow: 0 0 30px rgba(255,0,0,0.3);
+    }
+
+    .story h2 {
       color: #ff4444;
-      border-bottom: 1px solid #330000;
-      padding-bottom: 5px;
-      margin-top: 40px;
+      margin-top: 0;
+      font-family: 'Creepster', cursive;
+      letter-spacing: 2px;
     }
 
     footer {
-      background: #050505;
-      color: #777;
       text-align: center;
-      padding: 20px;
-      margin-top: 60px;
+      padding: 25px;
+      background: #020202;
+      color: #777;
       font-size: 14px;
       border-top: 1px solid #220000;
     }
@@ -69,45 +84,23 @@
 
 <header>
   <h1>Phantom Diaries</h1>
-  <p>Real Horror, Paranormal Encounters & Haunted Stories from the USA</p>
+  <p>True Horror • Paranormal Encounters • Haunted Places in the USA</p>
 </header>
 
 <div class="content">
 
-  <h2>True Horror Story from Texas</h2>
-  <p>
-    In a remote town in Texas, an abandoned farmhouse became the center of unexplainable fear.
-    Neighbors reported hearing footsteps echoing through empty halls, whispers in the dead of night,
-    and doors opening on their own. A family who dared to stay overnight fled before sunrise,
-    claiming something was watching them from the shadows.
-  </p>
+  <div class="story">
+    <h2>True Horror Story from Texas</h2>
+    <p>
+      In a remote Texas town, an abandoned farmhouse became a nightmare for anyone who stepped inside.
+      Footsteps echoed through empty halls, whispers crawled along the walls, and something unseen watched
+      from the darkness. A family fled before dawn, leaving everything behind.
+    </p>
+  </div>
 
-  <h2>Haunted House in New Orleans</h2>
-  <p>
-    New Orleans is known for its dark history, but one house on the outskirts of the city is feared even today.
-    Visitors describe sudden drops in temperature, voices calling their names, and the feeling of unseen hands
-    brushing against them. Paranormal investigators believe the spirits there are restless and aware.
-  </p>
-
-  <h2>Paranormal Encounter in California</h2>
-  <p>
-    Late one night, a truck driver traveling through rural California reported seeing a pale human-like figure
-    standing motionless in the middle of the road. When he stopped his vehicle, the figure vanished instantly,
-    leaving behind an unnatural silence and an overwhelming sense of dread.
-  </p>
-
-  <h2>Urban Legend from Appalachia</h2>
-  <p>
-    Deep within the Appalachian mountains, locals whisper about a presence that mimics human voices.
-    Campers have gone missing after following cries for help that lead deep into the forest.
-    Those who return speak of glowing eyes watching from between the trees.
-  </p>
-
-</div>
-
-<footer>
-  © 2026 Phantom Diaries · All stories inspired by real American folklore & eyewitness accounts
-</footer>
-
-</body>
-</html>
+  <div class="story">
+    <h2>Haunted House in New Orleans</h2>
+    <p>
+      On the edge of New Orleans stands a house feared even by locals.
+      Visitors report icy air, shadowy figures, and voices calling their names from empty rooms.
+      Paranormal investigators believe
