--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <meta name="description" content="True horror stories, paranormal encounters and haunted places from the USA. Phantom Diaries delivers real fear.">
   <meta name="keywords" content="true horror stories USA, paranormal America, haunted places USA">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<a href="my-first-horror-story.html" style="color:red; text-decoration:none;">
+  ➤ Read Full Story
+</a>
 
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Creepster&family=Montserrat&display=swap" rel="stylesheet">
